<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="about_viper">About Viper</string>
    <string name="changelog_viper_title">Changelog</string>
    <string name="changelog_viper_summary">View recent changes in ROM</string>
    <string name="changelog_viper_error">Unable to load changelog</string>
    <string name="maintainers_viper_title">Devices and maintainers</string>
    <string name="maintainers_viper_summary">List of supported devices and their official maintainers</string>
    <string name="maintainers_viper_error">Unable to load devices and maintainers list</string>
    <string name="website_viper_title">Download Center</string>
    <string name="website_viper_summary">Visit our download portal</string>
    <string name="google_plus_viper_title">Google+</string>
    <string name="google_plus_viper_summary">Join our G+ community</string>
    <string name="telegram_viper_title">Telegram</string>
    <string name="telegram_viper_summary">Subscribe to our Telegram channel</string>
    <string name="github_viper_title">Github</string>
    <string name="github_viper_summary">View our source code</string>
    <string name="crowdin_viper_title">Translations</string>
    <string name="crowdin_viper_summary">Translate to your language, visit our Crowdin</string>
    <string name="ota_viper_title">System updates</string>
    <string name="ota_viper_summary">Get the latest version of ViperOS</string>
    <string name="about_category">About</string>
    <string name="system_category">System</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="battery_title">Battery</string>
    <string name="buttons_title">Navigation bar and hardware keys</string>
    <string name="statusbar_clock_title">Clock &amp; Date</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="statusbar_misc_title">Statusbar Misc</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="recents_title">Recents Screen</string>
    <string name="carrierlabel_title">Carrier Label</string>
    <string name="lockscreen_ui_title">Lockscreen</string>
    <string name="lockscreen_weather_title">Weather</string>
    <string name="lockscreen_misc_title">Misc</string>
    <string name="sound_and_notifications_category">Sound And Notifications</string>
    <string name="venom_dialog_title">Help us help you!</string>
    <string name="venom_dialog_message">If you find a bug with any of these settings, post in the Bug Reports section of our Google+ page. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="venom_dialog_toast">READ THE WHOLE THING!</string>
    <string name="power_category">Power menu options</string>
    <string name="actions_category">Power menu items</string>
    <string name="powermenu_category">Power Menu</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide on lock screen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="default_string">Default</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
    <string name="status_bar_double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="status_bar_double_tap_to_sleep_summary">Double-tap on the status bar to turn off the display</string>
    <string name="hardware_keys_power_key_title">Power button</string>
    <string name="hardware_keys_home_key_title">Home button</string>
    <string name="hardware_keys_back_key_title">Back button</string>
    <string name="hardware_keys_menu_key_title">Menu button</string>
    <string name="hardware_keys_assist_key_title">Search button</string>
    <string name="hardware_keys_appswitch_key_title">Recents button</string>
    <string name="hardware_keys_camera_key_title">Camera button</string>
    <string name="hardware_keys_volume_keys_title">Volume buttons</string>
    <string name="hardware_keys_short_press_title">Short press action</string>
    <string name="hardware_keys_long_press_title">Long press action</string>
    <string name="hardware_keys_double_tap_title">Double tap action</string>
    <string name="camera_sleep_on_release_title">Screen peek</string>
    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
    <string name="camera_launch_title">Launch camera</string>
    <string name="camera_launch_summary">A longpress and release will launch camera</string>
    <string name="volbtn_music_controls_title">Playback control</string>
    <string name="volbtn_music_controls_summary">When the screen is off, long pressing the volume keys will seek music tracks</string>
    <string name="volbtn_cursor_control_title">Keyboard cursor control</string>
    <string name="power_end_call_title">End call</string>
    <string name="power_end_call_summary">Pressing the power button will end the current call</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="button_wake_title">Wake up device</string>
    <string name="volume_answer_call_title">Answer call</string>
    <string name="volume_answer_call_summary">Answer incoming calls by pressing the volume buttons</string>
    <string name="home_answer_call_title">Answer call</string>
    <string name="home_answer_call_summary">Pressing the home button will answer the current incoming call</string>
    <string name="kill_app_longpress_back">Kill app back button</string>
    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back button</string>
    <string name="button_backlight_title">Backlight</string>
    <string name="navigation_bar_category">Navigation bar</string>
    <string name="navigation_bar_enable_title">Enable navigation bar</string>
    <string name="navigation_bar_enable_summary">Enable on-screen navigation keys</string>
    <string name="navigation_bar_title">Buttons and layout</string>
    <string name="navigation_bar_summary">Customize navigation bar layout</string>
    <string name="navigation_bar_arrow_keys_title">Show arrow keys while typing</string>
    <string name="navigation_bar_arrow_keys_summary">Display left and right cursor buttons while typing. Overrides IME switcher.</string>
    <string name="navigation_bar_home_long_press_title">Home long press action</string>
    <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
    <string name="navigation_bar_recents_title">Recents long press action</string>
    <string name="volume_keys_control_ring_stream_title">Control ringtone volume</string>
    <string name="volume_keys_control_ring_stream_summary_on">Volume keys control ringtone volume</string>
    <string name="volume_keys_control_ring_stream_summary_off">Volume keys control media volume</string>
    <string name="camera_double_tap_power_gesture_desc">Quickly open camera without unlocking your screen</string>
    <string name="torch_long_press_power_gesture_title">Flashlight in lock screen</string>
    <string name="torch_long_press_power_gesture_desc">Long press power button while the screen is off to turn on the flashlight</string>
    <string name="torch_long_press_power_timeout_title">Automatically turn torch off</string>
    <string name="pixel_navbar_anim_title">Pixel navbar animation</string>
    <string name="pixel_navbar_anim_summary">Enables the pixel navbar animation</string>
    <string name="sysui_qqs_count_title">Small QS tiles</string>
    <string name="qs_rows_portrait_title">Rows (portrait)</string>
    <string name="qs_rows_landscape_title">Rows (landscape)</string>
    <string name="qs_columns_title">Columns</string>
    <string name="show_su_indicator_title">Enable SU icon</string>
    <string name="show_su_indicator_summary">Option to enable or disable native superuser icon</string>
    <string name="hw_keys_title">Hardware keys</string>
    <string name="hw_keys_summary">Enable hardware keys</string>
    <string name="navbar_dimensions_title">Navbar Dimensions</string>
    <string name="navbar_dimensions_summary">Customize navigation bar width and height</string>
    <string name="nav_bar_dynamic_title">Dynamic navbar color</string>
    <string name="nav_bar_dynamic_summary">Enables the navbar to adapt app\'s primary dark color. Restart your desired app to see effect.</string>
    <string name="show_4g_title">Show 4G</string>
    <string name="show_4g_summary">Show 4G instead of LTE in signal icons</string>
    <string name="lockscreen_battery_info_title">Battery info</string>
    <string name="lockscreen_battery_info_summary">Display battery info when charging</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="double_tap_sleep_anywhere_title">Tap to sleep</string>
    <string name="double_tap_sleep_anywhere_summary">Double-tap anywhere on the lockscreen to put device asleep</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="lockscreen_enable_qs_title">Quick settings</string>
    <string name="lockscreen_enable_qs_summary">Allow accessing quick settings and swipe shortcuts on secure lock screen</string>
    <string name="lockscreen_hide_status_bar_title">Status bar</string>
    <string name="lockscreen_hide_status_bar_summary">Display status bar on lock screen</string>
    <string name="fp_unlock_keystore_title">Fingerprint unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without pin/password/pattern</string>
    <string name="lockscreen_visualizer_summary">Show an effect on the lock screen when a music is playing</string>
</resources>