<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_misc_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
		
    <cyanogenmod.preference.CMSystemSettingListPreference
        android:key="qs_quick_pulldown"
		android:icon="@drawable/arrow_down_icon"
        android:title="@string/status_bar_quick_qs_pulldown_title"
        android:entries="@array/status_bar_quick_qs_pulldown_entries"
        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
        android:defaultValue="1" />

    <cyanogenmod.preference.CMSystemSettingSwitchPreference
        android:key="status_bar_brightness_control"
		android:icon="@drawable/brightness_auto_icon"
        android:title="@string/status_bar_toggle_brightness"
        android:summary="@string/status_bar_toggle_brightness_summary"
        android:defaultValue="false" />

    <cyanogenmod.preference.CMSystemSettingSwitchPreference
        android:key="status_bar_notif_count"
		android:icon="@drawable/counter_icon"
        android:title="@string/status_bar_notif_count_title"
        android:summary="@string/status_bar_notif_count_summary"
        android:defaultValue="false" />

    <cyanogenmod.preference.CMSystemSettingSwitchPreference
        android:key="double_tap_sleep_gesture"
		android:icon="@drawable/double_tap_icon"
        android:title="@string/status_bar_double_tap_to_sleep_title"
        android:summary="@string/status_bar_double_tap_to_sleep_summary"
        android:defaultValue="true" />
    
        <com.viper.venom.preference.SystemSettingSwitchPreference
        android:key="show_su_indicator"
        android:icon="@drawable/hide_su"
        android:title="@string/show_su_indicator_title"
        android:summary="@string/show_su_indicator_summary"
        android:defaultValue="true" />
    
        <com.viper.venom.preference.SystemSettingSwitchPreference
        android:key="show_fourg"
        android:icon="@drawable/ic_show_4g"
        android:title="@string/show_4g_title"
        android:summary="@string/show_4g_summary"
        android:defaultValue="false" />

</PreferenceScreen>
