<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/quicksettings_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <ListPreference
        android:key="sysui_qqs_count_key"
        android:title="@string/sysui_qqs_count_title"
        android:entries="@array/sysui_qqs_count_entries"
        android:entryValues="@array/sysui_qqs_count_values" />
	
    <ListPreference
        android:key="qs_rows_portrait"
        android:title="@string/qs_rows_portrait_title"
        android:entries="@array/qs_rows_portrait_entries"
        android:entryValues="@array/qs_rows_portrait_values" />

    <ListPreference
        android:key="qs_rows_landscape"
        android:title="@string/qs_rows_landscape_title"
        android:entries="@array/qs_rows_landscape_entries"
        android:entryValues="@array/qs_rows_landscape_values" />

    <ListPreference
        android:key="qs_columns"
        android:title="@string/qs_columns_title"
        android:entries="@array/qs_columns_entries"
        android:entryValues="@array/qs_columns_values" />
	
</PreferenceScreen>